--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,18 @@
     light --default,
     dark --prefersdark;
 }
+
+h1 {
+  font-weight: bold;
+  font-size: 32px;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 24px;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 18px;
+}
